HighScore now reads from/writes to file using I/O-streams